--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "update-schema": "./node_modules/.bin/babel-node ./scripts/updateSchema.js"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.6.0",
     "babel-relay-plugin": "^0.7.3",
     "better-npm-run": "0.0.8",
     "express": "4.13.4",
@@ -21,8 +20,9 @@
     "graphql-relay": "0.3.6",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-native": "^0.22.0-rc",
-    "react-native-device-info": "^0.8.4",
+    "react-helmet": "^2.3.1",
+    "react-native": "^0.22.2",
+    "react-native-device-info": "^0.9.0",
     "react-native-listitem": "1.0.5",
     "react-native-swipeout": "2.0.12",
     "react-relay": "^0.7.3"
